src/main/java/com/example/springbootboard/Error/errorcode/ErrorCode.java
package com.example.springbootboard.Error.errorcode;

public interface ErrorCode {
    String getErrorCode();

    int getHttpStatus();

    String getMessage();
}
